@@ -1,5 +1,7 @@
 == master
 
+* Change how the base module is included to prevent namespacing conflicts
+
 == 0.1.3 / 2008-09-07
 
 * Add compatibility with state_machine 0.3.0
